--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.5.1",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
