--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@heroicons/react": "^2.0.18",
+    "@types/chart.js": "^2.9.40",
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.0",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
